<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical"
    tools:context=".CalcActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/calculate_title"
        android:textAppearance="?android:textAppearanceLarge"
        android:padding="@dimen/title"/>
    <EditText android:id="@+id/copies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="@dimen/text_edit"
        android:hint="@string/successes"/>
    <EditText android:id="@+id/deck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="@dimen/text_edit"
        android:hint="@string/deck_size"/>
    <EditText android:id="@+id/draws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="@dimen/text_edit"
        android:hint="@string/draws"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left">
        <Spinner android:id="@+id/equality_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/desired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="@dimen/text_edit"
            android:hint="@string/desired"/>
    </LinearLayout>
    <Button android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/calculate_button"/>
    <TextView android:id="@+id/percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/percent_margin"
        android:textAlignment="center"
        android:textSize="40dp"
        android:text=""/>
</LinearLayout>
